--- a/vars/defaults.yml
+++ b/vars/defaults.yml
@@ -33,6 +33,7 @@ koha_use_custom_repo: yes
 koha_pin_custom_repo: no
 
 koha_git_repo: http://git.koha-community.org/koha.git
+koha_git_repo_clone: true
 koha_git_branch: master
 
 koha_dir: "/home/vagrant/kohaclone"
